--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -1,6 +1,6 @@
 .page-header { // also class used for post titles
     font-family: $headerfont;
-    font-size: 7vw;
+    font-size: 6vw;
     color: $electricpurp;
     display: inline-block;
     line-height: 8vw;
