--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -4,6 +4,74 @@ body:not(a) {
     color: $basegray;
 }
 
+
+.posts-container {
+    padding: 0 5vw;
+    font-family: $basefont;
+    min-height: calc(100vh - 20vh); // sticky footer
+    margin: 5vw 5vw 0 5vw;
+}
+
+.post {
+    padding-top: 3%;
+
+}
+
+.home-post-content {
+    display: block;
+    margin-bottom: -10px;
+
+    p {
+        line-height: 2rem;
+    }
+}
+
+.tags {
+    font-family: $headerfont;
+    margin: 0 0 0 10px;
+    display: inline;
+    background-color: $mint;
+    padding: 5px;
+    border-radius: 5%;
+    font-size: .8rem;
+    color: $basegray;
+    font-weight: bold;
+}
+
+
+
+.home-post-title,
+.post-date {
+    display: inline;
+    font-family: $headerfont;
+    line-height: 7vh;
+    font-size: 1rem;
+}
+
+.post-date {
+    letter-spacing: 1px;
+    padding-left: 15px;
+    color: $basegray;
+}
+
+a {
+    color: $electricpurp;
+
+    &:hover {
+        border-bottom: 5px solid $electricpurp;
+        transition: 0.2s;
+    }
+}
+
+.icon-a {
+
+    &:hover {
+        border-bottom: 0px solid transparent;
+        transition: .2s;
+        color: transparent !important;
+    }
+}
+
 .posts-container {
     max-width: 1500px;
 }
@@ -32,7 +100,7 @@ body:not(a) {
 
     p {
         line-height: 1.5rem; //main line height for post body
-        margin-top: 20px;
+        margin-top: 1vw;
         font-size: 1rem;
         text-align: justify;
     }
@@ -55,7 +123,7 @@ body:not(a) {
     h2 {
         font-size:1.5rem;
         color: $electricpurp;
-        margin: 2vw 0 0 0;
+        margin: 7vw 0 0 0;
     }
 
     h3 {
