--- a/css/styles.scss
+++ b/css/styles.scss
@@ -47,143 +47,8 @@ a {
 // HOME styling
 
 
-
-
-.icons {
-    margin-left: auto;
-    padding-right: 30px;
-}
-
-.icons span {
-    font-family: fontawesome !important;
-    font-size: 5vmin;
-    padding-right: 30px;
-
-}
-
-.navigation {
-    padding: 25px 15px 1vh 0;
-    display: flex;
-}
-
-.navigation li {
-    display: inline;
-    font-size: 1rem;
-    font-family: $basefont;
-    padding-right: 5vw;
-    text-transform: lowercase;
-    padding-left: 4.5vw;
-}
-
-.navigation a {
-    color: white;
-}
-
-// .header-nav class applies to navigation instances anywhere outside the home page
-
-.header-nav {
-    margin: 25px 0 0 25px;
-}
-
-.header-nav a {
-    color: $basegray;
-}
-
-.intro-container {
-    background: $basegray;
-    min-height: 48vh;
-    border: 25px solid white;
-}
-
-.myname {
-    font-family: $headerfont;
-    -webkit-text-fill-color: transparent;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: $mint;
-    font-size: 7vw;
-    padding: 0 5vw 3vw 5vw;
-    line-height: 10.5vw;
-}
-
-.intro-desc p {
-    font-family: $basefont;
-    color: #fff;
-    line-height: 1.7rem;
-    text-align: justify;
-    padding: 25px 6vw 25px 6vw;
-    letter-spacing: 1px;
-}
-
-.posts-container {
-    padding: 0 5vw;
-    font-family: $basefont;
-    min-height: calc(100vh - 20vh); // sticky footer
-    margin: 0 auto 0 auto;
-}
-
-.post {
-    padding-top: 3%;
-
-}
-
-.home-post-content {
-    display: block;
-    margin-bottom: -10px;
-
-    p {
-        line-height: 2rem;
-    }
-}
-
-.tags {
-    font-family: $headerfont;
-    margin: 0 0 0 10px;
-    display: inline;
-    background-color: $mint;
-    padding: 5px;
-    border-radius: 5%;
-    font-size: .8rem;
-    color: $basegray;
-    font-weight: bold;
-}
-
-
-
-.home-post-title,
-.post-date {
-    display: inline;
-    font-family: $headerfont;
-    line-height: 7vh;
-    font-size: 1rem;
-}
-
-.post-date {
-    letter-spacing: 1px;
-    padding-left: 15px;
-    color: $basegray;
-}
-
-a {
-    color: $electricpurp;
-
-    &:hover {
-        border-bottom: 5px solid $electricpurp;
-        transition: 0.2s;
-    }
-}
-
-.icon-a {
-
-    &:hover {
-        border-bottom: 0px solid transparent;
-        transition: .2s;
-        color: transparent !important;
-    }
-}
-
-
-// END MOBILE FIRST STYLING
-
+@import 'navigation';
+@import 'home-intro';
 @import 'posts';
 @import 'syntax';
 @import 'reset';
